src/test/deca/context/invalid/inheritance/inheritance_chain_override_mismatch_custom.deca
// Description :
// override non conforme dans chaîne d'héritage
//
// Resultats :
//    Erreur contextuelle
//    Ligne 14 : Signature pas convenable en override avec la super classe


class G {
    int f() { return 0; }
}

class H extends G {
    float f() { return 0.0; } // doit échouer
}
